Bug 314113 - Font encoding for IMDb results list broken
Summary: Font encoding for IMDb results list broken
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.7
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-30 07:39 UTC by Mihai C.
Modified: 2013-02-09 23:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.8
Sentry Crash Report:


Attachments
Example of broken font encoding (145.79 KB, image/png)
2013-01-30 07:40 UTC, Mihai C.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai C. 2013-01-30 07:39:22 UTC
The IMDb results list uses a bad font encoding, resulting in strage characters. Otherwise, Tellico presents the IMDb data correctly and stores it correctly in the XML. So this is only a minor annoiance.

Reproducible: Always

Steps to Reproduce:
1. Search IMDb for Hara-Kiri.
2. Scroll the list of results.
3. Observe the strange characters in some of the titles, e.g., Goyôkiba: Kamisori Hanzô jigoku zeme.



Using Ubuntu 12.04 and Tellico binary from https://launchpad.net/~dominik-stadler/+archive/ppa?field.series_filter=precise
Comment 1 Mihai C. 2013-01-30 07:40:44 UTC
Created attachment 76801 [details]
Example of broken font encoding
Comment 2 Robby Stephenson 2013-02-09 23:08:14 UTC
Git commit bcd5473f266517fbfe1bf7c8741dada471f4f44b by Robby Stephenson.
Committed on 09/02/2013 at 23:49.
Pushed by rstephenson into branch '2.3'.

Fix character encoding for IMDB results list

QTextCodec::codecForHtml() appears not to be able to detect the
content-type of the IMDB html and falls back to iso-8859-1. Since
we know IMDB actually returns utf-8, make it so.

Test case included.
FIXED-IN: 2.3.8

M  +4    -0    ChangeLog
M  +1    -0    src/fetch/fetcherjob.h
M  +2    -1    src/fetch/imdbfetcher.cpp
M  +3    -2    src/tellico_utils.cpp
M  +1    -1    src/tellico_utils.h
M  +22   -0    src/tests/imdbfetchertest.cpp
M  +1    -0    src/tests/imdbfetchertest.h

http://commits.kde.org/tellico/bcd5473f266517fbfe1bf7c8741dada471f4f44b