Fix character encoding for IMDB results list

QTextCodec::codecForHtml() appears not to be able to detect the
content-type of the IMDB html and falls back to iso-8859-1. Since
we know IMDB actually returns utf-8, make it so.

Test case included.
BUG: 314113
FIXED-IN: 2.3.8